(bug 19524) Move hiding initially hidden collapsable tables from monobook/main.css to common/shared.css

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -1270,10 +1270,6 @@ table.mw_metadata td {
 	background-color: #fcfcfc;
 }
 
-table.collapsed tr.collapsable {
-	display: none;
-}
-
 input#wpSummary {
 	width: 80%;
 }
